Avoid stretching images

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -68,6 +68,7 @@
 .image {
   grid-row: 1 / 3;
   z-index: -1;
+  object-fit: cover;
 }
 
 .number,
